Fixed margin-top distance for wrapping div

--- a/css/ui.css
+++ b/css/ui.css
@@ -695,7 +695,6 @@ select {
 }
 .settingsBlock, .settingsBlockZones {
     background-color: #fff;
-    margin-top: 60px;
 }
 .settingsBlockZones {
     height: 100%;
